--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,11 @@
 # Tested and compatible versions
 
 # Core dependencies
-numpy==1.26.4
-pandas==2.1.4
-scipy==1.11.4
-plotly==5.18.0
-streamlit==1.31.0
+numpy>=1.26.4,<2.0
+pandas>=2.2.0,<3.0
+scipy>=1.12.0,<2.0
+plotly>=5.18.0
+streamlit>=1.31.0
 
 # Optional (for better performance)
 # pillow==10.2.0
